@@ -32,17 +32,22 @@
  */
 package org.fxyz3d.importers.obj;
 
-import java.io.BufferedReader;
-import java.io.FileNotFoundException;
+import static java.util.Map.*;
+
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
-import java.util.logging.Level;
-import java.util.logging.Logger;
+import java.util.Map.Entry;
+import java.util.Set;
+import java.util.function.BiConsumer;
+import java.util.stream.Stream;
+
 import javafx.scene.image.Image;
 import javafx.scene.paint.Color;
 import javafx.scene.paint.Material;
@@ -54,87 +59,100 @@ public class MtlReader {
     private String baseUrl;
 
     public MtlReader(String filename, String parentUrl) {
-        baseUrl = parentUrl.substring(0,parentUrl.lastIndexOf('/')+1);
+        baseUrl = parentUrl.substring(0, parentUrl.lastIndexOf('/') + 1);
         String fileUrl = baseUrl + filename;
-        try {
-            URL mtlUrl = new URL(fileUrl);
-            ObjImporter.log("Reading material from filename = " + mtlUrl);
-            read(mtlUrl.openStream());
-        } catch (FileNotFoundException ex) {
-            System.err.println("No material file found for obj. ["+fileUrl+"]");
-        } catch (IOException ex) {
-            ex.printStackTrace();
+        ObjImporter.log("Reading material from filename = " + fileUrl);
+        try (Stream<String> line = Files.lines(Paths.get(new URI(fileUrl)))) {
+            line.map(String::trim)
+                .filter(l -> !l.isEmpty() && !l.startsWith("#"))
+                .forEach(this::parse);
+        } catch (IOException | URISyntaxException e) {
+            e.printStackTrace();
         }
     }
 
     private Map<String, Material> materials = new HashMap<>();
-    private PhongMaterial material = new PhongMaterial();
-    private boolean modified = false;
+    private PhongMaterial currentMaterial;
+    private Set<String> readProperties = new HashSet<>(PARSERS.size() - 1);
 
-    private void read(InputStream inputStream) throws IOException {
-        BufferedReader br = new BufferedReader(new InputStreamReader(inputStream));
-        String line;
-        String name = "default";
-        while ((line = br.readLine()) != null) {
-            try {
-                if (line.isEmpty() || line.startsWith("#")) {
-                    // comments and empty lines are ignored
-                } else if (line.startsWith("newmtl ")) {
-                    addMaterial(name);
-                    name = line.substring("newmtl ".length());
-                } else if (line.startsWith("Kd ")) {
-                    material.setDiffuseColor(readColor(line.substring(3)));
-                    modified = true;
-                } else if (line.startsWith("Ks ")) {
-                    material.setSpecularColor(readColor(line.substring(3)));
-                    modified = true;
-                } else if (line.startsWith("Ns ")) {
-                    material.setSpecularPower(Double.parseDouble(line.substring(3)));
-                    modified = true;
-                } else if (line.startsWith("map_Kd ")) {
-                    material.setDiffuseColor(Color.WHITE);
-                    material.setDiffuseMap(loadImage(line.substring("map_Kd ".length())));
-//                    material.setSelfIlluminationMap(loadImage(line.substring("map_Kd ".length())));
-//                    material.setSpecularColor(Color.WHITE);
-                    modified = true;
-                    //            } else if (line.startsWith("illum ")) {
-                    //                int illumNo = Integer.parseInt(line.substring("illum ".length()));
-                    /*
-                        0    Color on and Ambient off
-                        1    Color on and Ambient on
-                        2    Highlight on
-                        3    Reflection on and Ray trace on
-                        4    Transparency: Glass on
-                             Reflection: Ray trace on
-                        5    Reflection: Fresnel on and Ray trace on
-                        6    Transparency: Refraction on
-                             Reflection: Fresnel off and Ray trace on
-                        7    Transparency: Refraction on
-                             Reflection: Fresnel on and Ray trace on
-                        8    Reflection on and Ray trace off
-                        9    Transparency: Glass on
-                             Reflection: Ray trace off
-                        10   Casts shadows onto invisible surfaces
-                     */
-                } else {
-                    //log("material line ignored for " + name + ": " + line);
+    // mtl format spec: http://paulbourke.net/dataformats/mtl/
+    private static final Map<String, BiConsumer<String, MtlReader>> PARSERS = Map.ofEntries(
+            entry("newmtl ",    (l, m) -> m.parseNewMaterial(l)),
+            // Material color and illumination
+            entry("Ka ",        (l, m) -> m.parseIgnore("Ambient reflectivity (Ka)")),
+            entry("Kd ",        (l, m) -> m.parseDiffuseReflectivity(l)),
+            entry("Ks ",        (l, m) -> m.parseSpecularReflectivity(l)),
+            entry("Ns ",        (l, m) -> m.parseSpecularExponent(l)),
+            entry("Tf ",        (l, m) -> m.parseIgnore("Transmission filter (Tf)")),
+            entry("illum ",     (l, m) -> m.parseIgnore("Illumination model (illum)")),
+            entry("d ",         (l, m) -> m.parseIgnore("dissolve (d)")),
+            entry("Tr ",        (l, m) -> m.parseIgnore("Transparency (Tr)")),
+            entry("sharpness ", (l, m) -> m.parseIgnore("Sharpness (sharpness)")),
+            entry("Ni ",        (l, m) -> m.parseIgnore("Optical density (Ni)")),
+            // Material texture map
+            entry("map_Ka ",    (l, m) -> m.parseIgnore("Ambient reflectivity map (map_Ka)")),
+            entry("map_Kd ",    (l, m) -> m.parseDiffuseReflectivityMap(l)),
+            entry("map_Ks ",    (l, m) -> m.parseSpecularReflectivityMap(l)),
+            entry("map_Ns ",    (l, m) -> m.parseIgnore("Specular exponent map (map_Ns)")),
+            entry("map_d ",     (l, m) -> m.parseIgnore("Dissolve map (map_d)")),
+            entry("disp ",      (l, m) -> m.parseIgnore("Displacement map (disp)")),
+            entry("decal ",     (l, m) -> m.parseIgnore("Decal stencil map (decal)")),
+            entry("bump ",      (l, m) -> m.parseBumpMap(l)),
+            entry("refl ",      (l, m) -> m.parseIgnore("Reflection map (refl)")),
+            entry("map_aat ",   (l, m) -> m.parseIgnore("Anti-aliasing (map_aat)")));
+
+    private void parse(String line) {
+        for (Entry<String, BiConsumer<String, MtlReader>> parser : PARSERS.entrySet()) {
+            String identifier = parser.getKey();
+            if (line.startsWith(identifier)) {
+                if (!"newmtl ".equals(identifier) && !readProperties.add(identifier)) {
+                    ObjImporter.log(identifier + "already read for current material. Ignoring.");
+                    return;
                 }
-            } catch (Exception ex) {
-                Logger.getLogger(MtlReader.class.getName()).log(Level.SEVERE, "Failed to parse line:" + line, ex);
+                parser.getValue().accept(line.substring(identifier.length()), this);
+                return;
             }
         }
-        addMaterial(name);
+        ObjImporter.log("No parser found for: " + line);
     }
 
-    private void addMaterial(String name) {
-        if (modified) {
-            if (!materials.containsKey(name)) {
-                materials.put(name, material);
-            } else {
-                ObjImporter.log("This material is already added. Ignoring " + name);
-            }
-            material = new PhongMaterial(Color.WHITE);
+    private void parseIgnore(String nameAndKey) {
+        ObjImporter.log(nameAndKey + " is not supported. Ignoring.");
+    }
+
+    private void parseNewMaterial(String value) {
+        if (materials.containsKey(value)) {
+            ObjImporter.log(value + " material is already added. Ignoring.");
+            return;
         }
+        currentMaterial = new PhongMaterial();
+        readProperties.clear();
+        materials.put(value, currentMaterial);
+        ObjImporter.log(System.lineSeparator() + "Reading material " + value);
+    }
+    
+    private void parseDiffuseReflectivity(String value) {
+        currentMaterial.setDiffuseColor(readColor(value));
+    }
+
+    private void parseSpecularReflectivity(String value) {
+        currentMaterial.setSpecularColor(readColor(value));
+    }
+
+    private void parseSpecularExponent(String value) {
+        currentMaterial.setSpecularPower(Double.parseDouble(value));
+    }
+
+    private void parseDiffuseReflectivityMap(String value) {
+        currentMaterial.setDiffuseMap(loadImage(value));
+    }
+
+    private void parseSpecularReflectivityMap(String value) {
+        currentMaterial.setSpecularMap(loadImage(value));
+    }
+
+    private void parseBumpMap(String value) {
+        currentMaterial.setBumpMap(loadImage(value));
     }
 
     private Color readColor(String line) {
